--- a/process/pitch-2022-10-27.md
+++ b/process/pitch-2022-10-27.md
@@ -6,4 +6,4 @@ Taking out our phone at the bus stop, pacing up and down in the waiting room, li
 of the scope of things we do to not have nothing to do.
 The aim of this project is to define the different types of boredom people experience and see how these moments could be valued in our everyday lives.
 
-![Pitch1](images/Image_PITCH1.png)
+![Pitch1](images/pitch-1.png)
