--- a/process/pitch-2022-11-01.md
+++ b/process/pitch-2022-11-01.md
@@ -5,4 +5,4 @@ Free time, identified as the time one is not working, is overladen with activiti
 Some observations show that people might experience anxiety while having nothing to do.
 The aim of this project is to allow the user to reboot their system during these moments by focusing on themself.  
 
-![Pitch2](ObjetModeEnnui.jpeg)
+![Pitch2](images/ObjetModeEnnui.jpeg)
