remarques on pitch1

--- a/process/pitch-2022-10-27.md
+++ b/process/pitch-2022-10-27.md
@@ -11,3 +11,24 @@ The aim of this project is to define the different types of boredom people exper
 
 remarques:
 
+experience about time with people
+give someone a creature without interaction and see the relationship created
+
+put words to diffent kind of boredom 
+asking different people
+
+"time energy"
+
+play with the gesture as time marker 
+
+create mini experience with 
+
+interactive experiences that are used for an instant photo and distractions more than immersive experiences
+
+Crééer un mode ennui et le donner aux gens pour voir ce quiels en font 
+
+or questoinnaire 
+
+where would people like to be while being on mode ennui or where not 
+
+see boredom as a the original / natural state of the brain/person
