added suggestions - retours

--- a/process/pitch-2022-11-01.md
+++ b/process/pitch-2022-11-01.md
@@ -6,3 +6,12 @@ Some observations show that people might experience anxiety while having nothing
 The aim of this project is to allow the user to reboot their system during these moments by focusing on themself.  
 
 ![Pitch2](images/ObjetModeEnnui.jpeg)
+
+
+tune in turn on drop out
+
+reboot examples: plus de batterie, réseau, plus de bus 
+faire l'expérience du reboot
+"esthetique de la disparition"
+etre a l'ecoute des moments de reboot
+provoquer ou accompagner le reboot?
