--- a/process/pitch-2022-11-03.md
+++ b/process/pitch-2022-11-03.md
@@ -7,3 +7,24 @@ The aim of this project is to bring out these moments. The programm would run wh
 when they are not, allowing the user to provoke these reboots or not.
 
 ![Pitch2](images/ObjetModeEnnui.jpeg)
+
+krank jason statam (film)
+
+intention qui manque? 
+
+reboot 
+
+mandala
+
+interaction non voulu/prévue
+
+liste de gestes non-intentionnel en lien avec le focus ou le daydream
+
+histoire: trouver une histoire très simple (graine qui pousse, etccc) et scenariser twine l'expèrience de la persoone ou elle en est avec une liste des moments de reboot et decrire experience utilisateur de qq en train de faire pousser cette graine (dans la douche, en train deregatrder un film -> user journey) 
+
+le projet se concentre sur le fine tuning
+
+un des mecabismes avec lequel on joue quand on fume c'est de jouer un peu comme les voitures qui se foncent dedans, ça donne une sorte de controle sur la mort
+
+fitbeat tracker mais avec pendu 
+
