--- a/process/pitch-2022-11-29.md
+++ b/process/pitch-2022-11-29.md
@@ -2,6 +2,15 @@ TOTIBOT
 
 Humans are less and less inclined to be bored because of the busy contemporary lifestyle. But the moments one is not active are necessary for the brain which will switch to the so-called Default Mode Network when one is not focusing on a task.
 
+    -AS a result we lost /forgot our ability to be bored and its benefits -> benefits of boredom-
+
+    -to bring back those beneftis we need to provoke reboot moments et definir ces moments-
+
+
+
 The aim of this project is to bring out these reboot moments. A program would collect body datas while the user is active to generate a world based on these but if the user stops all the progress is lost. Nevertheless the user can decide to keep it running while not active by interacting directly with it.
 
 ![Pitch2](images/ObjetModeEnnui.jpeg)
+
+créer un user journey avec en paralèle l'évolution du programme 
+
