--- a/process/pitch-2022-12-06.md
+++ b/process/pitch-2022-12-06.md
@@ -5,4 +5,5 @@ Inactivity is yet an important moment for the brain. It switches to the so-calle
 
 Proto1 consists of two rings linked by a chain. It collects body datas (clamminess of hands and heartbeat) to know if you are active or not. If it detects inactivity, the chain will tighten up and lock your fingers until you go back to an activity.
 
-![rings](images/proto1-gif.gif)
+
+<img src="images/proto1-gif.gif" width="50%">
